LENLS slides, backlog commit

--- a/acg.tex
+++ b/acg.tex
@@ -148,7 +148,7 @@ to represent signatures and lexicons that will form our grammars.
     \centering
     \includegraphics[height=0.2\textheight]{diagrams/single-acg.pdf}
     \caption{{\label{fig:single-acg} A lexicon with its abstract
-        and object signatures..}}
+        and object signatures.}}
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.4\textwidth}
